# media-downloader

./: .gitignore  Cargo.toml
src/: download_audios.rs  download_transcripts.rs  lib.rs  main.rs
