[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
dotenvy = "0.15.7"
eyre = "0.6.12"
futures = "0.3.30"
reqwest = { version = "0.11.24",default-features = false, features = ["json", "rustls-tls-webpki-roots", "stream"] }
tokio = { version = "1.36.0", features = ["full"] }
